# wtfsnip

./: Cargo.toml  README.md
src/: config.rs  main.rs  render.rs  selection.rs  theme.rs  windows.rs
