[package]
name = "waysnip"
version = "0.1.0"
edition = "2021"
description = "Snappy Wayland region screenshot tool (rectangle selection), styled after the illogical-impulse region selector"
license = "MIT"

[dependencies]
smithay-client-toolkit = "0.20"
wayland-client = "0.31"
wayland-protocols = { version = "0.32", features = ["client", "unstable"] }
wayland-protocols-wlr = { version = "0.3", features = ["client"] }
tiny-skia = "0.12"
fontdue = "0.9"
memmap2 = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
strip = true
